# homework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh  package.json
cmake/: FindUdev.cmake
html/: index.css  index.html  index.js
src/: CMakeLists.txt  Console.cpp  Console.h  Editline.cpp  Editline.h  Homework.cpp  Homework.h  Options.cpp  Options.h  Split.h  config.js  console.js  device.js  homework.js  log.js  main.cpp  modules.js  package.json  rule.js  scene.js  timer.js  utils.js  variable.js  webserver.js  websocket.js
src/common/: Action.h  ActionGroup.h  ArgumentDescriptor.h  Condition.h  Event.h  Homedir.h  JsonUtils.h  Options.cpp  Options.h  Rule.h  State.cpp  State.h  WebSocket.cpp  WebSocket.h  common.cmake  devices.js
src/console/: console.js  package.json
src/daemon/: Alarm.cpp  Alarm.h  CMakeLists.txt  Controller.h  Daemon.cpp  Daemon.h  JsonValue.h  Module.h  Rule.h  RuleJS.cpp  Scene.h  Sensor.h  State.h  main.cpp
src/daemon/modules/: Alarm.cpp  Alarm.h  AlarmSensor.cpp  AlarmSensor.h  CMakeLists.txt  Component.cpp  Component.h  Controller.h  Module.cpp  Module.h  Modules.cpp  Modules.h  Rule.h  RuleJS.cpp  RuleJS.h  Scene.h  Sensor.h
src/daemon/modules/cec/: CMakeLists.txt  CecModule.cpp  CecModule.h
src/daemon/modules/fake/: CMakeLists.txt  FakeModule.cpp  FakeModule.h
src/daemon/modules/websocket/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  WSModule.cpp  WSModule.h
src/daemon/modules/zway/: CMakeLists.txt  ZWayModule.cpp  ZWayModule.h
src/device/: Action.h  Device.cpp  Device.h  Event.h  State.h  device.cmake
src/modules/caseta/: index.js  smartbridge.js
src/modules/clapper/: index.js
src/modules/zwave/: classes.js  dimmer.js  generic.js  index.js  multisensor6.js  switch.js  thermostat.js
src/node/: devices.js  homework.js  zwave.js
src/platform/: Platform.h  platforms.cmake
src/platform/zwave/: PlatformZwave.cpp  PlatformZwave.h  zwave.cmake
src/schedule/: Schedule.cpp  Schedule.h  Sun.cpp  Sun.h  Sunrise.cpp  Sunrise.h  schedule.cmake
src/web/: client.js  get.sh  index.css  index.html  web.css  web.js
